# ExplorerLens.io

./: .clang-format  .clang-tidy  .editorconfig  .env.ps1  .flake8  .gitattributes  .gitignore  .markdownlint.json  .markdownlintignore  ARCHITECTURE.md  BUILD_STATUS.md  CBXShell.sln  CHANGELOG-archive.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CRITICAL_unzip_missing.md  DEVELOPER_GUIDE.md  Dockerfile  INSTALLATION_READY.md  Install-DarkThumbs.ps1  Install-ExplorerLens.ps1  KNOWN_ISSUES.md  LENSShell.sln  LICENSE  MASTER_PLAN.md  MODERNIZATION_COMPLETE.md  NOTICE  PRODUCTION_BUILD.md  PROJECT_SPEC_PROMPT.md  PROJECT_STATUS.md  QUICK_BUILD_REFERENCE.md  README.ExplorerLens.io.md  README.md  READY_FOR_TESTING.md  REFACTOR_COMPLETION_PHASE_A.md  REFACTOR_PLAN.md  ROADMAP.md  RUN-BUILD.bat  SPRINT_COMPLETION.md  (+13 more)
CBXManager/: About.cpp  About.h  CBXManager.manifest  CBXManager.rc  CBXManager.vcxproj  CMakeLists.txt  ChangeSummaryDlg.h  DarkModeHelper.h  DecoderHealthCheck.h  ExportDiagnostics.h  MainDlg.cpp  MainDlg.h  RegManager.h  resource.h  tools.h
CBXShell/: CBXShell.cpp  CBXShell.h  CBXShell.manifest  CBXShell.rc  CBXShell.rgs  CBXShell.vcxproj  CBXShell.vcxproj.filters  CBXShellClass.cpp  CBXShellClass.h  CMakeLists.txt  DarkModeHelper.h  EngineAdapter.cpp  EngineAdapter.h  GdiplusRAII.h  ModernCppHelper.h  audio_thumbnail.cpp  audio_thumbnail.h  avif_decoder.cpp  avif_decoder.h  cbxArchive.h  document_thumbnail.cpp  document_thumbnail.h  enhanced_cache.h  error_logger.h  font_preview.cpp  font_preview.h  gpu_accelerator.cpp  gpu_accelerator.h  heif_decoder_native.cpp  heif_decoder_native.h  jxl_decoder.cpp  jxl_decoder.h  libarchive_wrapper.cpp  libarchive_wrapper.h  memory_utils.h  metrics_collector.h  pdf_decoder.cpp  pdf_decoder.h  performance_profiler.h  raw_decoder.cpp  (+12 more)
CBXShell/shaders/: thumbnail_resize.hlsl
Engine/: ALL_BUILD.vcxproj  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  DarkThumbsEngine.slnx  DarkThumbsEngine.vcxproj  DarkThumbsEngine.vcxproj.filters  Engine.h  INSTALL.vcxproj  INSTALL.vcxproj.filters  README.md  README_ARCHITECTURE.md  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  Version.h.in  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  pch.h  test-output.txt
Engine/AI/: AIAnnotationAssistant.h  AIModelRegistry.h  AIPerformanceProfiler.h  AISearchIntegration.h  AIThumbnailBatchProcessor.cpp  AIThumbnailBatchProcessor.h  AIThumbnailEnhancer.cpp  AIThumbnailEnhancer.h  AIThumbnailPipeline.h  AIUpscaler.h  AdaptiveColorProfileManager.cpp  AdaptiveColorProfileManager.h  AdaptiveCropEngine.h  AltTextGeneratorV2.h  AltTextSynthesizerBLIP2.h  AutoOrientationCorrector.h  AutoTaggingEngine.h  AutoWhiteBalanceCorrector.h  AutonomousWorkflowOrchestrator.cpp  AutonomousWorkflowOrchestrator.h  BatchCaptionPipeline.h  BlurDetectionFilter.h  CLIPEmbeddingEngine.h  CLIPQueryProcessor.cpp  CLIPQueryProcessor.h  CaptionGenerationPipeline.h  CaptionQualityScorer.h  CaptionSearchIndexer.h  CaptionStyleTransferEngine.h  ColorPaletteExtractor.h  ColorPaletteGenerator.h  ContentAwareInpainter.cpp  ContentAwareInpainter.h  ContentAwareResizer.h  ContentCategorizationEngine.cpp  ContentCategorizationEngine.h  ContentCategoryClassifier.h  ContentClassifier.h  ContentModerationFilter.cpp  ContentModerationFilter.h  (+113 more)
Engine/AR/: ARPassthroughVideoEngine.h  ARPreviewBridgeEngine.h  OcclusionAwareRenderer.h  PlaneSurfaceDetector.h  QRThumbnailTrigger.h  SharedARSpaceManager.h  SpatialAnchorPersistenceV2.h  SpatialAudioAnnotator.h
Engine/CLI/: BatchCLI.h  CICDWebhookReceiver.h  CLICommandParser.h  LensBatchProcessorV2.h  LensCLI.h  LensCacheCLI.h  (+5 more)
ExplorerLens.py/: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
LENSManager/: About.cpp  About.h  CMakeLists.txt  ChangeSummaryDlg.h  DarkModeController.h  DarkModeHelper.h  DecoderHealthCheck.h  ExportDiagnostics.h  FormatGroupHelper.h  FormatStatusProvider.h  LENSManager.cpp  LENSManager.h  LENSManager.manifest  LENSManager.rc  LENSManager.vcproj  LENSManager.vcxproj  LENSManager.vcxproj.filters  MainDlg.cpp  MainDlg.h  PerformanceDashboard.h  RegManager.h  SettingsPortability.h  SystemTrayIcon.h  resource.h  stdafx.cpp  stdafx.h  tools.h
LENSShell/: CMakeLists.txt  CrashDumpCapture.cpp  CrashDumpCapture.h  DarkModeHelper.h  EngineAdapter.cpp  EngineAdapter.h  GdiplusRAII.h  ImageTypes.h  LENSArchive.h  LENSShell.cpp  LENSShell.h  LENSShell.idl  LENSShell.manifest  LENSShell.rc  LENSShell.rgs  LENSShell.vcproj  LENSShell.vcxproj  LENSShell.vcxproj.filters  LENSShellClass.cpp  LENSShellClass.h  LENSShellContextMenu.cpp  LENSShellContextMenu.h  LENSTypes.h  ModernCppHelper.h  PropertyStoreImpl.cpp  PropertyStoreImpl.h  RarWrapper.h  StdAfx.cpp  StdAfx.h  ZipWrapper.h  audio_thumbnail.cpp  audio_thumbnail.h  document_thumbnail.cpp  document_thumbnail.h  enhanced_cache.h  error_logger.h  font_preview.cpp  font_preview.h  gpu_accelerator.cpp  gpu_accelerator.h  (+21 more)
src/: CMakeLists.txt
tests/: AIEnhancementTests.cpp  AccessibilityFrameworkTests.cpp  AccessibilityI18nTests.cpp  AdvancedCachingTests.cpp  AnimatedThumbnailsTests.cpp  ArchiveGridPreviewTests.cpp  BatchProcessingTests.cpp  Benchmark-ArchivePerformance.ps1  BufferPoolAllocatorTests.cpp  BuildValidationTests.cpp  CBXBench.cpp  CMakeLists.txt  COMApartmentAuditTests.cpp  CloudIntegrationTests.cpp  ColorSpaceHDRTests.cpp  Compare-BenchmarkBaseline.ps1  CompatibilityMatrixTests.cpp  ContextMenuShellUXTests.cpp  ContinuousFuzzEngineTests.cpp  CrashIntelligenceTests.cpp  DarkModeManagerTests.cpp  DecoderHealthDashboardTests.cpp  DecoderHotsetManagerTests.cpp  DiagnosticsExporterTests.cpp  DirectoryFormatProfilerTests.cpp  DuplicateDetectionTests.cpp  EBookCoverExtractorTests.cpp  ETWSinkCompleteTests.cpp  EnterpriseDeploymentTests.cpp  ExplorerWorkSchedulerTests.cpp  FormatConversionTests.cpp  GPUThumbnailTest.cpp  GPUValidator.cpp  GPUValidator.vcxproj  GUIHardeningTests.cpp  IntegrationTests.cpp  IsolationStabilityTests.cpp  JPEG2000DecoderGTests.cpp  JXRWICDecoderTests.cpp  KTXTextureDecoderTests.cpp  (+112 more)
(+3660 files in other folders)
